# attribute_authority

./: .gitignore  .pylintrc  LICENSE  PLAN.md  README.md  alembic.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
alembic/: env.py  env.py  # Edit this file to provide MetaData to Alembic
alembic/versions/: 0e0cff7ad121_add_admin_role_and_attribute_privilege_.py  22307527f0e4_create_tables.py  2619fe99b847_add_unique_constraint_to_privileges.py  3fe8ede5e50c_fix_naming.py  566d65326e0f_change_colum_name_from_entitlements_ro_.py  585f313fa208_add_relationships_to_existing_tables.py  5a7408f06efd_seperated_attributes_table_from_user.py  5fb89e5363eb_change_of_db_add_user_attribute_value_.py  929c3845f5a3_add_new_field_to_users.py  95f681614b17_baseline.py  9f4c104ad4c3_add_delete_value_to_privilege_model.py  cd48ce93666f_added_new_invitsation_model.py  ed79f0afebb2_delete_source_from_user_attribute_model.py
attribute_authority/: cli.py  main.py  privacy  privacy_policy_hdf.md  privacystatement.md  user_attributes_config.json
attribute_authority/api/: __init__.py  dependencies.py
attribute_authority/core/: config.py  logging_config.py  security.py
attribute_authority/crud/: admin_role.py  attribute.py  attribute_definition.py  attribute_privilege_rule.py  invitation.py  privilege.py  user.py  user_attribute.py  user_attribute_value.py
attribute_authority/db/: base.py  base_class.py  session.py
attribute_authority/models/: __init__.py  admin_role.py  attribute.py  attribute_privilege_rule.py  invitation.py  (+5 more)
tests/: attribute_authority_test.py
(+70 files in other folders)
