


[metadata]
name = attribute_authority
summary = A sample AA
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Amin Mahnamfar
author_email = a.mahnamfar@kit.edu

home_page = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
    Documentation = https://attribute_authority.readthedocs.io/en/latest/

license = MIT license
license_file = LICENSE

# TODO Add more classifiers here
classifier =
    Programming Language :: Python :: 3


[options.entry_points]
console_scripts =
    attribute_authority=attribute_authority.cli:main


[bdist_wheel]
universal = 1

[files]
packages =
    attribute_authority
